--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "web3": "^1.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
