--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
     "framer-motion": "^4.1.17",
+    "http-proxy-middleware": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
