--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@ethersproject/abstract-provider": "^5.3.0",
     "ethers": "^5.3.1",
     "framer-motion": "^4.1.17",
+    "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
