--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "recharts": "^2.0.9"
   },
   "scripts": {
@@ -53,6 +53,7 @@
     "@types/react-dom": "^17.0.7",
     "@types/react-router-dom": "^5.1.7",
     "http-proxy-middleware": "^2.0.0",
+    "request": "^2.88.2",
     "typescript": "^4.3.2"
   }
 }
