Make SSL config simpler
Fixes #4

--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -27,28 +27,13 @@ server {
     add_header X-debug-message "domain is $domain" always;
 
     if ($http_upgrade = "websocket") {
-        rewrite ^.*$ /ws/$domain;
+        rewrite ^.*$ /ws;
     }
 
-    location /ws/goerli {
-        proxy_set_header X-debug-message-websocket "websocket is goerli";
+    location /ws {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
-        proxy_pass http://goerli/;
-    }
-
-    location /ws/mainnet {
-        proxy_set_header X-debug-message-websocket "websocket is mainnet";
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-        proxy_pass http://mainnet/;
-    }
-
-    location /ws/ropsten {
-        proxy_set_header X-debug-message-websocket "websocket is ropsten";
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-        proxy_pass http://ropsten/;
+        proxy_pass http://$domain/;
     }
 
     location / {
@@ -68,13 +53,16 @@ server {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
+
     if ($host = ropsten.watchtheburn.com) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
+
     if ($host = mainnet.watchtheburn.com) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
+
 
     if ($host = watchtheburn.com) {
         return 301 https://$host$request_uri;
