--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@ethersproject/abstract-provider": "^5.3.0",
     "ethers": "^5.3.1",
     "framer-motion": "^4.1.17",
+    "lru-cache": "^6.0.0",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -48,6 +49,7 @@
     "@types/d3-scale": "^3.3.2",
     "@types/d3-scale-chromatic": "^3.0.0",
     "@types/jest": "^26.0.23",
+    "@types/lru-cache": "^5.1.1",
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
