--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,13 +10,16 @@
             "request": "launch",
             "url": "http://localhost:3000",
             "webRoot": "${workspaceFolder}"
-        }
+        },
         {
-            "name": "Debug Daemon",
+            "name": "Launch Daemon",
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}"
+            "program": "${workspaceFolder}/daemon",
+            "args": [
+               "--geth-endpoint=http://localhost:5946"
+            ]
         }
     ]
 }
