ws: Add 2 minute timeout for proxy read

--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -33,6 +33,7 @@ server {
     location /ws {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
+        proxy_read_timeout 120;
         proxy_pass http://$domain/;
     }
 
