Implement worker based transaction receipts fetching (#60)
* Implement worker based transaction receipts fetching

This will improve parallelzation of calling transaction receipts
instead of doing it sequentially. Uses a worker pool with jobs

* Merge issue

* Fix panic

* Refacotr

* One RPC client per worker

* Add logging of workers

* Reuse connections

* Up the number of workers to 20

* Cleanup logs

* Add worker count as a flag

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,10 +18,7 @@
             "mode": "auto",
             "program": "${workspaceFolder}/daemon",
             "args": [
-                "--geth-endpoint-http=http://localhost:8557",
-                "--geth-endpoint-websocket=ws://localhost:8556",
-                "--db-path=${workspaceFolder}/watchtheburn.db",
-                "--development",
+                "--db-path=${workspaceFolder}/watchtheburn.db"
             ]
         }
     ]
