Docker: Copy over trusted certs to docker

--- a/daemon/Dockerfile
+++ b/daemon/Dockerfile
@@ -6,6 +6,7 @@ RUN go build
 
 FROM debian:buster-slim
 
+COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /go/src/github.com/mohamedmansour/ethereum-burn-stats/daemon/daemon daemon
 
 ENTRYPOINT ["/daemon"]
