Introduce new logo

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "ETH Burn",
+  "short_name": "Watch The Burn",
   "name": "Showcasing how much ETH has burned in each block",
   "icons": [
     {
