Update PWA Title Name

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Watch The Burn",
-  "name": "Showcasing how much ETH has burned in each block",
+  "name": "Watch The Burn",
   "icons": [
     {
       "src": "logo_64.png",
