Disable Clarity on LocalHost

--- a/frontend/.env
+++ b/frontend/.env
@@ -2,4 +2,4 @@ HTTPS=true
 REACT_APP_WEB3_URL=
 REACT_APP_START_BLOCK=
 REACT_APP_SHOW_SERVER_SPONSOR=
-REACT_APP_GOOGLE_ANALYTICS_ID=
+REACT_APP_ANALYTICS_ID=
