--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,4 @@
 HTTPS=true
 REACT_APP_WEB3_URL=
-REACT_APP_START_BLOCK=
 REACT_APP_SHOW_SERVER_SPONSOR=
-REACT_APP_ANALYTICS_ID=
+REACT_APP_ANALYTICS_ID=false
