--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,6 +31,16 @@
             "args": [
                 "--db-path=${workspaceFolder}/watchtheburn.db"
             ]
+        },
+        {
+            "name": "Launch Migration",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/migration",
+            "args": [
+                "--sqlite-db-path=${workspaceFolder}/watchtheburn.db"
+            ]
         }
     ]
 }
