brand: Match the PWA background to the site background

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#232635",
-  "background_color": "#232635"
+  "theme_color": "#1d1e2b",
+  "background_color": "#1d1e2b"
 }
